Fix screenshot position on iphone screen

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -263,7 +263,7 @@ header {
 		display: flex;
 		background-size: 260px auto;
 		background-position: center 0;
-		margin-top: 47px;
+		margin-top: 165px;
 		justify-content: center;
 		padding-bottom: 75px;
 	}
